<resources>
    <string name="app_name">SIPS_Android_Official</string>
    <string name="loading_athletes">Loading athletes…</string>

    <string name="seconds">%d seconds left</string>

    <string name="no_test_data">No test data</string>
    <string name="loading_test_data">Loading test data…</string>

    <string name="cd_athletes_list">Athletes list</string>
    <string name="cd_test_data_list">Test Data list</string>
    <string name="cd_athlete_name">Name of the athlete</string>

    <string name="test_athlete">Test</string>
    <string name="edit_athlete">Edit Athlete</string>
    <string name="start_test">Start Test</string>
    <string name="stop_test">Stop</string>
    <string name="choose_test">Choose Test</string>
    <string name="one_leg_squat_hold">One Leg Squat Hold</string>
    <string name="single_leg_jump">Single Leg Jump</string>

    <string name="submit">Submit</string>
    <string name="add_athlete">Add Athlete</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_last_name">Last Name</string>
    <string name="first_name">First Name</string>

</resources>
